// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FeaturedProperties /> by default should render the right structure 1`] = `
<FeaturedProperties
  featuredProperties={
    Array [
      Object {
        "bedroomsNumber": 3,
        "guestsNumber": 3,
        "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
        "locationName": "Catania",
        "pricePerPeriod": "$280",
        "propertyName": "The Cat House",
        "propertyType": "Bed and breakfast",
        "propertyUrl": "/",
        "ratingNumber": 4.8,
      },
      Object {
        "bedroomsNumber": 3,
        "guestsNumber": 3,
        "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
        "locationName": "Catania",
        "pricePerPeriod": "$280",
        "propertyName": "The Cat House",
        "propertyType": "Bed and breakfast",
        "propertyUrl": "/",
        "ratingNumber": 4.8,
      },
    ]
  }
  headingText={null}
  isShowingPlaceholder={false}
>
  <FeaturedProperty
    bedroomsNumber={3}
    guestsNumber={3}
    imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
    isShowingPlaceholder={false}
    key="The Cat House0"
    locationName="Catania"
    periodText="night"
    pricePerPeriod="$280"
    propertyName="The Cat House"
    propertyType="Bed and breakfast"
    propertyUrl="/"
    propertyUrlTarget="_self"
    ratingNumber={4.8}
  >
    <Card
      className="has-featured"
      href="/"
      target="_self"
    >
      <a
        className="ui card has-featured"
        href="/"
        onClick={[Function]}
        target="_self"
      >
        <withLazyLoad(ResponsiveImage)
          imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
          isFluid={true}
          isLazyLoaded={false}
        >
          <ResponsiveImage
            alternativeText="Image Widget"
            hasRoundedCorners={false}
            imageHeight={null}
            imageNotFoundLabelText="Image not found!"
            imageTitle="Image Title"
            imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
            imageWidth={null}
            isAvatar={false}
            isCircular={false}
            isFluid={true}
            isLazyLoaded={false}
            label={null}
            sizes={null}
            srcSet={null}
          >
            <figure
              className="responsive-image is-fluid"
            >
              <Image
                alt="Image Widget"
                as="img"
                avatar={false}
                fluid={true}
                onLoad={[Function]}
                sizes={null}
                src="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
                srcSet={null}
                title="Image Title"
                ui={true}
              >
                <img
                  alt="Image Widget"
                  className="ui fluid image"
                  onLoad={[Function]}
                  sizes={null}
                  src="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
                  srcSet={null}
                  title="Image Title"
                />
              </Image>
            </figure>
          </ResponsiveImage>
        </withLazyLoad(ResponsiveImage)>
        <CardContent>
          <div
            className="content"
          >
            <CardMeta>
              <div
                className="meta"
              >
                <Subheading>
                  <span
                    className="ui sub header"
                  >
                    Bed and breakfast
                  </span>
                </Subheading>
              </div>
            </CardMeta>
            <CardHeader>
              <div
                className="header"
              >
                <Heading
                  className={null}
                  isColorInverted={false}
                  size="medium"
                  textAlign={null}
                >
                  <Header
                    as="h3"
                    className={null}
                    inverted={false}
                    textAlign={null}
                  >
                    <h3
                      className="ui header"
                    >
                      The Cat House
                    </h3>
                  </Header>
                </Heading>
              </div>
            </CardHeader>
            <CardDescription>
              <div
                className="description"
              >
                Catania
              </div>
            </CardDescription>
            <CardDescription>
              <div
                className="description"
              >
                Guests: 3 | Bedrooms: 3
              </div>
            </CardDescription>
            <CardDescription>
              <div
                className="description"
              >
                <Rating
                  iconSize="tiny"
                  isShowingNumeral={true}
                  ratingNumber={4.8}
                >
                  4.8
                  <Rating
                    clearable="auto"
                    disabled={true}
                    maxRating={5}
                    rating={5}
                    size="tiny"
                  >
                    <div
                      className="ui tiny disabled rating"
                      onMouseLeave={[Function]}
                      role="radiogroup"
                    >
                      <RatingIcon
                        active={true}
                        aria-checked={false}
                        aria-posinset={1}
                        aria-setsize={5}
                        as="i"
                        index={0}
                        key="0"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        selected={false}
                      >
                        <i
                          aria-checked={false}
                          aria-posinset={1}
                          aria-setsize={5}
                          className="active icon"
                          onClick={[Function]}
                          onKeyUp={[Function]}
                          onMouseEnter={[Function]}
                          role="radio"
                          tabIndex={0}
                        />
                      </RatingIcon>
                      <RatingIcon
                        active={true}
                        aria-checked={false}
                        aria-posinset={2}
                        aria-setsize={5}
                        as="i"
                        index={1}
                        key="1"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        selected={false}
                      >
                        <i
                          aria-checked={false}
                          aria-posinset={2}
                          aria-setsize={5}
                          className="active icon"
                          onClick={[Function]}
                          onKeyUp={[Function]}
                          onMouseEnter={[Function]}
                          role="radio"
                          tabIndex={0}
                        />
                      </RatingIcon>
                      <RatingIcon
                        active={true}
                        aria-checked={false}
                        aria-posinset={3}
                        aria-setsize={5}
                        as="i"
                        index={2}
                        key="2"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        selected={false}
                      >
                        <i
                          aria-checked={false}
                          aria-posinset={3}
                          aria-setsize={5}
                          className="active icon"
                          onClick={[Function]}
                          onKeyUp={[Function]}
                          onMouseEnter={[Function]}
                          role="radio"
                          tabIndex={0}
                        />
                      </RatingIcon>
                      <RatingIcon
                        active={true}
                        aria-checked={false}
                        aria-posinset={4}
                        aria-setsize={5}
                        as="i"
                        index={3}
                        key="3"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        selected={false}
                      >
                        <i
                          aria-checked={false}
                          aria-posinset={4}
                          aria-setsize={5}
                          className="active icon"
                          onClick={[Function]}
                          onKeyUp={[Function]}
                          onMouseEnter={[Function]}
                          role="radio"
                          tabIndex={0}
                        />
                      </RatingIcon>
                      <RatingIcon
                        active={true}
                        aria-checked={true}
                        aria-posinset={5}
                        aria-setsize={5}
                        as="i"
                        index={4}
                        key="4"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        selected={false}
                      >
                        <i
                          aria-checked={true}
                          aria-posinset={5}
                          aria-setsize={5}
                          className="active icon"
                          onClick={[Function]}
                          onKeyUp={[Function]}
                          onMouseEnter={[Function]}
                          role="radio"
                          tabIndex={0}
                        />
                      </RatingIcon>
                    </div>
                  </Rating>
                </Rating>
              </div>
            </CardDescription>
            <CardDescription>
              <div
                className="description"
              >
                <span>
                  from 
                  <Heading
                    className={null}
                    isColorInverted={false}
                    size="medium"
                    textAlign={null}
                  >
                    <Header
                      as="h3"
                      className={null}
                      inverted={false}
                      textAlign={null}
                    >
                      <h3
                        className="ui header"
                      >
                        $280
                      </h3>
                    </Header>
                  </Heading>
                  /night
                </span>
              </div>
            </CardDescription>
          </div>
        </CardContent>
      </a>
    </Card>
  </FeaturedProperty>
  <FeaturedProperty
    bedroomsNumber={3}
    guestsNumber={3}
    imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
    isShowingPlaceholder={false}
    key="The Cat House1"
    locationName="Catania"
    periodText="night"
    pricePerPeriod="$280"
    propertyName="The Cat House"
    propertyType="Bed and breakfast"
    propertyUrl="/"
    propertyUrlTarget="_self"
    ratingNumber={4.8}
  >
    <Card
      className="has-featured"
      href="/"
      target="_self"
    >
      <a
        className="ui card has-featured"
        href="/"
        onClick={[Function]}
        target="_self"
      >
        <withLazyLoad(ResponsiveImage)
          imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
          isFluid={true}
          isLazyLoaded={false}
        >
          <ResponsiveImage
            alternativeText="Image Widget"
            hasRoundedCorners={false}
            imageHeight={null}
            imageNotFoundLabelText="Image not found!"
            imageTitle="Image Title"
            imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
            imageWidth={null}
            isAvatar={false}
            isCircular={false}
            isFluid={true}
            isLazyLoaded={false}
            label={null}
            sizes={null}
            srcSet={null}
          >
            <figure
              className="responsive-image is-fluid"
            >
              <Image
                alt="Image Widget"
                as="img"
                avatar={false}
                fluid={true}
                onLoad={[Function]}
                sizes={null}
                src="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
                srcSet={null}
                title="Image Title"
                ui={true}
              >
                <img
                  alt="Image Widget"
                  className="ui fluid image"
                  onLoad={[Function]}
                  sizes={null}
                  src="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
                  srcSet={null}
                  title="Image Title"
                />
              </Image>
            </figure>
          </ResponsiveImage>
        </withLazyLoad(ResponsiveImage)>
        <CardContent>
          <div
            className="content"
          >
            <CardMeta>
              <div
                className="meta"
              >
                <Subheading>
                  <span
                    className="ui sub header"
                  >
                    Bed and breakfast
                  </span>
                </Subheading>
              </div>
            </CardMeta>
            <CardHeader>
              <div
                className="header"
              >
                <Heading
                  className={null}
                  isColorInverted={false}
                  size="medium"
                  textAlign={null}
                >
                  <Header
                    as="h3"
                    className={null}
                    inverted={false}
                    textAlign={null}
                  >
                    <h3
                      className="ui header"
                    >
                      The Cat House
                    </h3>
                  </Header>
                </Heading>
              </div>
            </CardHeader>
            <CardDescription>
              <div
                className="description"
              >
                Catania
              </div>
            </CardDescription>
            <CardDescription>
              <div
                className="description"
              >
                Guests: 3 | Bedrooms: 3
              </div>
            </CardDescription>
            <CardDescription>
              <div
                className="description"
              >
                <Rating
                  iconSize="tiny"
                  isShowingNumeral={true}
                  ratingNumber={4.8}
                >
                  4.8
                  <Rating
                    clearable="auto"
                    disabled={true}
                    maxRating={5}
                    rating={5}
                    size="tiny"
                  >
                    <div
                      className="ui tiny disabled rating"
                      onMouseLeave={[Function]}
                      role="radiogroup"
                    >
                      <RatingIcon
                        active={true}
                        aria-checked={false}
                        aria-posinset={1}
                        aria-setsize={5}
                        as="i"
                        index={0}
                        key="0"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        selected={false}
                      >
                        <i
                          aria-checked={false}
                          aria-posinset={1}
                          aria-setsize={5}
                          className="active icon"
                          onClick={[Function]}
                          onKeyUp={[Function]}
                          onMouseEnter={[Function]}
                          role="radio"
                          tabIndex={0}
                        />
                      </RatingIcon>
                      <RatingIcon
                        active={true}
                        aria-checked={false}
                        aria-posinset={2}
                        aria-setsize={5}
                        as="i"
                        index={1}
                        key="1"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        selected={false}
                      >
                        <i
                          aria-checked={false}
                          aria-posinset={2}
                          aria-setsize={5}
                          className="active icon"
                          onClick={[Function]}
                          onKeyUp={[Function]}
                          onMouseEnter={[Function]}
                          role="radio"
                          tabIndex={0}
                        />
                      </RatingIcon>
                      <RatingIcon
                        active={true}
                        aria-checked={false}
                        aria-posinset={3}
                        aria-setsize={5}
                        as="i"
                        index={2}
                        key="2"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        selected={false}
                      >
                        <i
                          aria-checked={false}
                          aria-posinset={3}
                          aria-setsize={5}
                          className="active icon"
                          onClick={[Function]}
                          onKeyUp={[Function]}
                          onMouseEnter={[Function]}
                          role="radio"
                          tabIndex={0}
                        />
                      </RatingIcon>
                      <RatingIcon
                        active={true}
                        aria-checked={false}
                        aria-posinset={4}
                        aria-setsize={5}
                        as="i"
                        index={3}
                        key="3"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        selected={false}
                      >
                        <i
                          aria-checked={false}
                          aria-posinset={4}
                          aria-setsize={5}
                          className="active icon"
                          onClick={[Function]}
                          onKeyUp={[Function]}
                          onMouseEnter={[Function]}
                          role="radio"
                          tabIndex={0}
                        />
                      </RatingIcon>
                      <RatingIcon
                        active={true}
                        aria-checked={true}
                        aria-posinset={5}
                        aria-setsize={5}
                        as="i"
                        index={4}
                        key="4"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        selected={false}
                      >
                        <i
                          aria-checked={true}
                          aria-posinset={5}
                          aria-setsize={5}
                          className="active icon"
                          onClick={[Function]}
                          onKeyUp={[Function]}
                          onMouseEnter={[Function]}
                          role="radio"
                          tabIndex={0}
                        />
                      </RatingIcon>
                    </div>
                  </Rating>
                </Rating>
              </div>
            </CardDescription>
            <CardDescription>
              <div
                className="description"
              >
                <span>
                  from 
                  <Heading
                    className={null}
                    isColorInverted={false}
                    size="medium"
                    textAlign={null}
                  >
                    <Header
                      as="h3"
                      className={null}
                      inverted={false}
                      textAlign={null}
                    >
                      <h3
                        className="ui header"
                      >
                        $280
                      </h3>
                    </Header>
                  </Heading>
                  /night
                </span>
              </div>
            </CardDescription>
          </div>
        </CardContent>
      </a>
    </Card>
  </FeaturedProperty>
</FeaturedProperties>
`;

exports[`<FeaturedProperties /> if \`props.headingText\` is passed should render the right structure 1`] = `
<FeaturedProperties
  featuredProperties={
    Array [
      Object {
        "bedroomsNumber": 3,
        "guestsNumber": 3,
        "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
        "locationName": "Catania",
        "pricePerPeriod": "$280",
        "propertyName": "The Cat House",
        "propertyType": "Bed and breakfast",
        "propertyUrl": "/",
        "ratingNumber": 4.8,
      },
      Object {
        "bedroomsNumber": 3,
        "guestsNumber": 3,
        "imageUrl": "https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg",
        "locationName": "Catania",
        "pricePerPeriod": "$280",
        "propertyName": "The Cat House",
        "propertyType": "Bed and breakfast",
        "propertyUrl": "/",
        "ratingNumber": 4.8,
      },
    ]
  }
  headingText="My god I love Cliff Richard"
  isShowingPlaceholder={false}
>
  <Heading
    className={null}
    isColorInverted={false}
    size="medium"
    textAlign={null}
  >
    <Header
      as="h3"
      className={null}
      inverted={false}
      textAlign={null}
    >
      <h3
        className="ui header"
      >
        My god I love Cliff Richard
      </h3>
    </Header>
  </Heading>
  <FeaturedProperty
    bedroomsNumber={3}
    guestsNumber={3}
    imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
    isShowingPlaceholder={false}
    key="The Cat House0"
    locationName="Catania"
    periodText="night"
    pricePerPeriod="$280"
    propertyName="The Cat House"
    propertyType="Bed and breakfast"
    propertyUrl="/"
    propertyUrlTarget="_self"
    ratingNumber={4.8}
  >
    <Card
      className="has-featured"
      href="/"
      target="_self"
    >
      <a
        className="ui card has-featured"
        href="/"
        onClick={[Function]}
        target="_self"
      >
        <withLazyLoad(ResponsiveImage)
          imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
          isFluid={true}
          isLazyLoaded={false}
        >
          <ResponsiveImage
            alternativeText="Image Widget"
            hasRoundedCorners={false}
            imageHeight={null}
            imageNotFoundLabelText="Image not found!"
            imageTitle="Image Title"
            imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
            imageWidth={null}
            isAvatar={false}
            isCircular={false}
            isFluid={true}
            isLazyLoaded={false}
            label={null}
            sizes={null}
            srcSet={null}
          >
            <figure
              className="responsive-image is-fluid"
            >
              <Image
                alt="Image Widget"
                as="img"
                avatar={false}
                fluid={true}
                onLoad={[Function]}
                sizes={null}
                src="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
                srcSet={null}
                title="Image Title"
                ui={true}
              >
                <img
                  alt="Image Widget"
                  className="ui fluid image"
                  onLoad={[Function]}
                  sizes={null}
                  src="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
                  srcSet={null}
                  title="Image Title"
                />
              </Image>
            </figure>
          </ResponsiveImage>
        </withLazyLoad(ResponsiveImage)>
        <CardContent>
          <div
            className="content"
          >
            <CardMeta>
              <div
                className="meta"
              >
                <Subheading>
                  <span
                    className="ui sub header"
                  >
                    Bed and breakfast
                  </span>
                </Subheading>
              </div>
            </CardMeta>
            <CardHeader>
              <div
                className="header"
              >
                <Heading
                  className={null}
                  isColorInverted={false}
                  size="medium"
                  textAlign={null}
                >
                  <Header
                    as="h3"
                    className={null}
                    inverted={false}
                    textAlign={null}
                  >
                    <h3
                      className="ui header"
                    >
                      The Cat House
                    </h3>
                  </Header>
                </Heading>
              </div>
            </CardHeader>
            <CardDescription>
              <div
                className="description"
              >
                Catania
              </div>
            </CardDescription>
            <CardDescription>
              <div
                className="description"
              >
                Guests: 3 | Bedrooms: 3
              </div>
            </CardDescription>
            <CardDescription>
              <div
                className="description"
              >
                <Rating
                  iconSize="tiny"
                  isShowingNumeral={true}
                  ratingNumber={4.8}
                >
                  4.8
                  <Rating
                    clearable="auto"
                    disabled={true}
                    maxRating={5}
                    rating={5}
                    size="tiny"
                  >
                    <div
                      className="ui tiny disabled rating"
                      onMouseLeave={[Function]}
                      role="radiogroup"
                    >
                      <RatingIcon
                        active={true}
                        aria-checked={false}
                        aria-posinset={1}
                        aria-setsize={5}
                        as="i"
                        index={0}
                        key="0"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        selected={false}
                      >
                        <i
                          aria-checked={false}
                          aria-posinset={1}
                          aria-setsize={5}
                          className="active icon"
                          onClick={[Function]}
                          onKeyUp={[Function]}
                          onMouseEnter={[Function]}
                          role="radio"
                          tabIndex={0}
                        />
                      </RatingIcon>
                      <RatingIcon
                        active={true}
                        aria-checked={false}
                        aria-posinset={2}
                        aria-setsize={5}
                        as="i"
                        index={1}
                        key="1"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        selected={false}
                      >
                        <i
                          aria-checked={false}
                          aria-posinset={2}
                          aria-setsize={5}
                          className="active icon"
                          onClick={[Function]}
                          onKeyUp={[Function]}
                          onMouseEnter={[Function]}
                          role="radio"
                          tabIndex={0}
                        />
                      </RatingIcon>
                      <RatingIcon
                        active={true}
                        aria-checked={false}
                        aria-posinset={3}
                        aria-setsize={5}
                        as="i"
                        index={2}
                        key="2"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        selected={false}
                      >
                        <i
                          aria-checked={false}
                          aria-posinset={3}
                          aria-setsize={5}
                          className="active icon"
                          onClick={[Function]}
                          onKeyUp={[Function]}
                          onMouseEnter={[Function]}
                          role="radio"
                          tabIndex={0}
                        />
                      </RatingIcon>
                      <RatingIcon
                        active={true}
                        aria-checked={false}
                        aria-posinset={4}
                        aria-setsize={5}
                        as="i"
                        index={3}
                        key="3"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        selected={false}
                      >
                        <i
                          aria-checked={false}
                          aria-posinset={4}
                          aria-setsize={5}
                          className="active icon"
                          onClick={[Function]}
                          onKeyUp={[Function]}
                          onMouseEnter={[Function]}
                          role="radio"
                          tabIndex={0}
                        />
                      </RatingIcon>
                      <RatingIcon
                        active={true}
                        aria-checked={true}
                        aria-posinset={5}
                        aria-setsize={5}
                        as="i"
                        index={4}
                        key="4"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        selected={false}
                      >
                        <i
                          aria-checked={true}
                          aria-posinset={5}
                          aria-setsize={5}
                          className="active icon"
                          onClick={[Function]}
                          onKeyUp={[Function]}
                          onMouseEnter={[Function]}
                          role="radio"
                          tabIndex={0}
                        />
                      </RatingIcon>
                    </div>
                  </Rating>
                </Rating>
              </div>
            </CardDescription>
            <CardDescription>
              <div
                className="description"
              >
                <span>
                  from 
                  <Heading
                    className={null}
                    isColorInverted={false}
                    size="medium"
                    textAlign={null}
                  >
                    <Header
                      as="h3"
                      className={null}
                      inverted={false}
                      textAlign={null}
                    >
                      <h3
                        className="ui header"
                      >
                        $280
                      </h3>
                    </Header>
                  </Heading>
                  /night
                </span>
              </div>
            </CardDescription>
          </div>
        </CardContent>
      </a>
    </Card>
  </FeaturedProperty>
  <FeaturedProperty
    bedroomsNumber={3}
    guestsNumber={3}
    imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
    isShowingPlaceholder={false}
    key="The Cat House1"
    locationName="Catania"
    periodText="night"
    pricePerPeriod="$280"
    propertyName="The Cat House"
    propertyType="Bed and breakfast"
    propertyUrl="/"
    propertyUrlTarget="_self"
    ratingNumber={4.8}
  >
    <Card
      className="has-featured"
      href="/"
      target="_self"
    >
      <a
        className="ui card has-featured"
        href="/"
        onClick={[Function]}
        target="_self"
      >
        <withLazyLoad(ResponsiveImage)
          imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
          isFluid={true}
          isLazyLoaded={false}
        >
          <ResponsiveImage
            alternativeText="Image Widget"
            hasRoundedCorners={false}
            imageHeight={null}
            imageNotFoundLabelText="Image not found!"
            imageTitle="Image Title"
            imageUrl="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
            imageWidth={null}
            isAvatar={false}
            isCircular={false}
            isFluid={true}
            isLazyLoaded={false}
            label={null}
            sizes={null}
            srcSet={null}
          >
            <figure
              className="responsive-image is-fluid"
            >
              <Image
                alt="Image Widget"
                as="img"
                avatar={false}
                fluid={true}
                onLoad={[Function]}
                sizes={null}
                src="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
                srcSet={null}
                title="Image Title"
                ui={true}
              >
                <img
                  alt="Image Widget"
                  className="ui fluid image"
                  onLoad={[Function]}
                  sizes={null}
                  src="https://li3.cdbcdn.com/oh/522a12d9-ab51-4635-94c1-42536f286e4d.jpg"
                  srcSet={null}
                  title="Image Title"
                />
              </Image>
            </figure>
          </ResponsiveImage>
        </withLazyLoad(ResponsiveImage)>
        <CardContent>
          <div
            className="content"
          >
            <CardMeta>
              <div
                className="meta"
              >
                <Subheading>
                  <span
                    className="ui sub header"
                  >
                    Bed and breakfast
                  </span>
                </Subheading>
              </div>
            </CardMeta>
            <CardHeader>
              <div
                className="header"
              >
                <Heading
                  className={null}
                  isColorInverted={false}
                  size="medium"
                  textAlign={null}
                >
                  <Header
                    as="h3"
                    className={null}
                    inverted={false}
                    textAlign={null}
                  >
                    <h3
                      className="ui header"
                    >
                      The Cat House
                    </h3>
                  </Header>
                </Heading>
              </div>
            </CardHeader>
            <CardDescription>
              <div
                className="description"
              >
                Catania
              </div>
            </CardDescription>
            <CardDescription>
              <div
                className="description"
              >
                Guests: 3 | Bedrooms: 3
              </div>
            </CardDescription>
            <CardDescription>
              <div
                className="description"
              >
                <Rating
                  iconSize="tiny"
                  isShowingNumeral={true}
                  ratingNumber={4.8}
                >
                  4.8
                  <Rating
                    clearable="auto"
                    disabled={true}
                    maxRating={5}
                    rating={5}
                    size="tiny"
                  >
                    <div
                      className="ui tiny disabled rating"
                      onMouseLeave={[Function]}
                      role="radiogroup"
                    >
                      <RatingIcon
                        active={true}
                        aria-checked={false}
                        aria-posinset={1}
                        aria-setsize={5}
                        as="i"
                        index={0}
                        key="0"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        selected={false}
                      >
                        <i
                          aria-checked={false}
                          aria-posinset={1}
                          aria-setsize={5}
                          className="active icon"
                          onClick={[Function]}
                          onKeyUp={[Function]}
                          onMouseEnter={[Function]}
                          role="radio"
                          tabIndex={0}
                        />
                      </RatingIcon>
                      <RatingIcon
                        active={true}
                        aria-checked={false}
                        aria-posinset={2}
                        aria-setsize={5}
                        as="i"
                        index={1}
                        key="1"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        selected={false}
                      >
                        <i
                          aria-checked={false}
                          aria-posinset={2}
                          aria-setsize={5}
                          className="active icon"
                          onClick={[Function]}
                          onKeyUp={[Function]}
                          onMouseEnter={[Function]}
                          role="radio"
                          tabIndex={0}
                        />
                      </RatingIcon>
                      <RatingIcon
                        active={true}
                        aria-checked={false}
                        aria-posinset={3}
                        aria-setsize={5}
                        as="i"
                        index={2}
                        key="2"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        selected={false}
                      >
                        <i
                          aria-checked={false}
                          aria-posinset={3}
                          aria-setsize={5}
                          className="active icon"
                          onClick={[Function]}
                          onKeyUp={[Function]}
                          onMouseEnter={[Function]}
                          role="radio"
                          tabIndex={0}
                        />
                      </RatingIcon>
                      <RatingIcon
                        active={true}
                        aria-checked={false}
                        aria-posinset={4}
                        aria-setsize={5}
                        as="i"
                        index={3}
                        key="3"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        selected={false}
                      >
                        <i
                          aria-checked={false}
                          aria-posinset={4}
                          aria-setsize={5}
                          className="active icon"
                          onClick={[Function]}
                          onKeyUp={[Function]}
                          onMouseEnter={[Function]}
                          role="radio"
                          tabIndex={0}
                        />
                      </RatingIcon>
                      <RatingIcon
                        active={true}
                        aria-checked={true}
                        aria-posinset={5}
                        aria-setsize={5}
                        as="i"
                        index={4}
                        key="4"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        selected={false}
                      >
                        <i
                          aria-checked={true}
                          aria-posinset={5}
                          aria-setsize={5}
                          className="active icon"
                          onClick={[Function]}
                          onKeyUp={[Function]}
                          onMouseEnter={[Function]}
                          role="radio"
                          tabIndex={0}
                        />
                      </RatingIcon>
                    </div>
                  </Rating>
                </Rating>
              </div>
            </CardDescription>
            <CardDescription>
              <div
                className="description"
              >
                <span>
                  from 
                  <Heading
                    className={null}
                    isColorInverted={false}
                    size="medium"
                    textAlign={null}
                  >
                    <Header
                      as="h3"
                      className={null}
                      inverted={false}
                      textAlign={null}
                    >
                      <h3
                        className="ui header"
                      >
                        $280
                      </h3>
                    </Header>
                  </Heading>
                  /night
                </span>
              </div>
            </CardDescription>
          </div>
        </CardContent>
      </a>
    </Card>
  </FeaturedProperty>
</FeaturedProperties>
`;

exports[`<FeaturedProperties /> if \`props.isShowingPlaceholder\` === true and \`props.featuredProperties.length\` === 0 should render the right structure 1`] = `
<FeaturedProperties
  featuredProperties={Array []}
  headingText={null}
  isShowingPlaceholder={true}
>
  <FeaturedProperty
    bedroomsNumber={0}
    guestsNumber={0}
    imageUrl=""
    isShowingPlaceholder={true}
    key="0"
    locationName=""
    periodText="night"
    pricePerPeriod=""
    propertyName=""
    propertyType=""
    propertyUrl=""
    propertyUrlTarget="_self"
    ratingNumber={0}
  >
    <Card
      className="has-featured"
      href=""
      target="_self"
    >
      <div
        className="ui card has-featured"
        href=""
        onClick={[Function]}
        target="_self"
      >
        <BlockPlaceholder
          isFluid={false}
          isRectangular={true}
          isSquare={false}
        >
          <div
            className="placeholder block rectangle"
          />
        </BlockPlaceholder>
        <CardContent>
          <div
            className="content"
          >
            <CardHeader>
              <div
                className="header"
              >
                <Divider
                  className=""
                  hasLine={false}
                  size="small"
                >
                  <Divider
                    className="is-size-small"
                    hidden={true}
                    section={false}
                  >
                    <div
                      className="ui hidden divider is-size-small"
                    />
                  </Divider>
                </Divider>
                <TextPlaceholder
                  isFluid={true}
                  length="medium"
                >
                  <div
                    className="placeholder text medium fluid"
                  />
                </TextPlaceholder>
                <TextPlaceholder
                  isFluid={true}
                  length="long"
                >
                  <div
                    className="placeholder text long fluid"
                  />
                </TextPlaceholder>
                <TextPlaceholder
                  isFluid={true}
                  length="long"
                >
                  <div
                    className="placeholder text long fluid"
                  />
                </TextPlaceholder>
              </div>
            </CardHeader>
          </div>
        </CardContent>
      </div>
    </Card>
  </FeaturedProperty>
  <FeaturedProperty
    bedroomsNumber={0}
    guestsNumber={0}
    imageUrl=""
    isShowingPlaceholder={true}
    key="1"
    locationName=""
    periodText="night"
    pricePerPeriod=""
    propertyName=""
    propertyType=""
    propertyUrl=""
    propertyUrlTarget="_self"
    ratingNumber={0}
  >
    <Card
      className="has-featured"
      href=""
      target="_self"
    >
      <div
        className="ui card has-featured"
        href=""
        onClick={[Function]}
        target="_self"
      >
        <BlockPlaceholder
          isFluid={false}
          isRectangular={true}
          isSquare={false}
        >
          <div
            className="placeholder block rectangle"
          />
        </BlockPlaceholder>
        <CardContent>
          <div
            className="content"
          >
            <CardHeader>
              <div
                className="header"
              >
                <Divider
                  className=""
                  hasLine={false}
                  size="small"
                >
                  <Divider
                    className="is-size-small"
                    hidden={true}
                    section={false}
                  >
                    <div
                      className="ui hidden divider is-size-small"
                    />
                  </Divider>
                </Divider>
                <TextPlaceholder
                  isFluid={true}
                  length="medium"
                >
                  <div
                    className="placeholder text medium fluid"
                  />
                </TextPlaceholder>
                <TextPlaceholder
                  isFluid={true}
                  length="long"
                >
                  <div
                    className="placeholder text long fluid"
                  />
                </TextPlaceholder>
                <TextPlaceholder
                  isFluid={true}
                  length="long"
                >
                  <div
                    className="placeholder text long fluid"
                  />
                </TextPlaceholder>
              </div>
            </CardHeader>
          </div>
        </CardContent>
      </div>
    </Card>
  </FeaturedProperty>
  <FeaturedProperty
    bedroomsNumber={0}
    guestsNumber={0}
    imageUrl=""
    isShowingPlaceholder={true}
    key="2"
    locationName=""
    periodText="night"
    pricePerPeriod=""
    propertyName=""
    propertyType=""
    propertyUrl=""
    propertyUrlTarget="_self"
    ratingNumber={0}
  >
    <Card
      className="has-featured"
      href=""
      target="_self"
    >
      <div
        className="ui card has-featured"
        href=""
        onClick={[Function]}
        target="_self"
      >
        <BlockPlaceholder
          isFluid={false}
          isRectangular={true}
          isSquare={false}
        >
          <div
            className="placeholder block rectangle"
          />
        </BlockPlaceholder>
        <CardContent>
          <div
            className="content"
          >
            <CardHeader>
              <div
                className="header"
              >
                <Divider
                  className=""
                  hasLine={false}
                  size="small"
                >
                  <Divider
                    className="is-size-small"
                    hidden={true}
                    section={false}
                  >
                    <div
                      className="ui hidden divider is-size-small"
                    />
                  </Divider>
                </Divider>
                <TextPlaceholder
                  isFluid={true}
                  length="medium"
                >
                  <div
                    className="placeholder text medium fluid"
                  />
                </TextPlaceholder>
                <TextPlaceholder
                  isFluid={true}
                  length="long"
                >
                  <div
                    className="placeholder text long fluid"
                  />
                </TextPlaceholder>
                <TextPlaceholder
                  isFluid={true}
                  length="long"
                >
                  <div
                    className="placeholder text long fluid"
                  />
                </TextPlaceholder>
              </div>
            </CardHeader>
          </div>
        </CardContent>
      </div>
    </Card>
  </FeaturedProperty>
</FeaturedProperties>
`;
